Test to update TWA

--- a/src/App.scss
+++ b/src/App.scss
@@ -688,7 +688,7 @@ h3, .gray-title {
   }
 
   .bg-yellow {
-    background-color: #F6B451
+    background-color: #444039
   }
 
   .ml-0\.5em {
@@ -1106,7 +1106,7 @@ button:hover {
   // height: 320px;
   // left: 35px;
   // top: 86px;
-  background: #F3C263;
+  background: #a39a87;
   border-radius: 24px;
   text-align: left;
 }
@@ -1152,7 +1152,7 @@ button:hover {
 }
 
 .dropdown-menu {
-  background-color: #FCE7C0;
+  background-color: #ebdfca;
   border-radius: 16px;
   padding: 0.5em;
 }
