Fixed links that were broken

--- a/src/App.scss
+++ b/src/App.scss
@@ -688,7 +688,7 @@ h3, .gray-title {
   }
 
   .bg-yellow {
-    background-color: #444039
+    background-color: #c3deee
   }
 
   .ml-0\.5em {
@@ -760,7 +760,7 @@ h3, .gray-title {
     height: 3em;
     border-radius: 999px;
     margin-right: 0.75em;
-    background-color: #999999;
+    background-color: #c8e3f5;
   }
 
   .bubbleLink .textGroup {
@@ -807,7 +807,7 @@ h3, .gray-title {
     line-height: 24px;
     letter-spacing: 0em;
     text-align: left;
-    color: #999999;
+    color: #cef4ff;
   }
 
 .fourOFour {
